...

            <TextView
                android:id="@+id/createAccount_tv"
                style="@style/CreateAccountFragmentTextView_style"
                android:layout_marginTop="@dimen/margin_20dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTextInputLayout"
                style="@style/Fragment_CreateAccount_TextInputLayout_style"
                app:layout_constraintEnd_toEndOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/Fragment_CreateAccount_TextInputLayout_style"
                app:layout_constraintEnd_toEndOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/phoneNumberTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.hbb20.CountryCodePicker
                    android:id="@+id/fragment_create_account_countrycode_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_50dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                style="@style/Fragment_CreateAccount_TextInputLayout_style"
                app:layout_constraintEnd_toEndOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comfirmPasswordTextInputLayout"
                style="@style/Fragment_CreateAccount_TextInputLayout_style"
                app:layout_constraintEnd_toEndOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comfirmPasswordTextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccount_btn"
                style="@style/Fragment_CreateAccount_Button_style"
                android:textColor="@color/white"
...

            <TextView
                android:id="@+id/alreadyHaveAnAccount_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerUsingGoogle_btn"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
...
