...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_login_forgot_password_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_icon_iv"
                app:passwordToggleDrawable="@drawable/password_toggle_selector">

                <com.google.android.material.textfield.TextInputLayout
...
                    app:layout_constraintBottom_toTopOf="@id/login_fragment_password_textInputLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_login_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:fontFamily="@font/helvetica"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_summary_plan_sector_dropdown_layout"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_login_password_tv"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:width="0dp"
                        android:fontFamily="@font/helvetica"
                        android:hint="@string/password"
                        android:inputType="textPassword"
...
                android:layout_marginTop="15dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/forgot_password"
                android:textColor="@color/forgot_text_color"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/fragment_login_login_btn"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_login_login_btn"
                android:layout_width="match_parent"
...
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/fragment_login_create_account_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_forgot_password_tv" />

            <TextView
                android:id="@+id/fragment_login_create_account_tv"
...
