<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/ic_background_welcome"
    tools:context="com.example.closedcircuitapplication.common.onboarding.presentation.view.WelcomeScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background_lines">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upper_guidline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/wellcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#0B0B0B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/upper_guidline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/hand_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/emoji"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/wellcome_tv"
            app:layout_constraintStart_toEndOf="@+id/wellcome_tv"
            app:layout_constraintTop_toTopOf="@+id/wellcome_tv" />

        <TextView
            android:id="@+id/quotetextView"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/quote"
            app:layout_constraintBottom_toTopOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wellcome_tv"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hands_example_illustration"
            app:layout_constraintBottom_toTopOf="@id/fragment_welcome_login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quotetextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_welcome_login_btn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="#24500F"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/welcomePageCreateAccount_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcomePageCreateAccount_btn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:text="@string/createAccount"
            android:textAllCaps="false"
            android:textColor="#24500F"
            android:textSize="16sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/termsAndCondition_Tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_welcome_login_btn"
            app:strokeColor="#24500F"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/termsAndCondition_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_create"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomePageCreateAccount_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>